--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,15 @@
 nav {
   padding: 20px 0 20px 0;
 }
+
+.loadingBox {
+  width: 100%;
+  font-size: 30px;
+  text-align: center;
+  padding-top: 40px;
+}
+
+.loadingRound {
+  height: 50px;
+  width: 50px;
+}
